# Alpaca-API-cpp

./: CMakeLists.txt  Cmake_Windows  Documentacion.md  README.md  Requerimiento APIs.txt  alpaca_save.txt  main.cpp  todo
src/Account/: Account.cpp  Account.h
src/Asset/: Asset.cpp  Asset.h
src/Clock/: Clock.cpp  Clock.h
src/Order/: Order.cpp  Order.h
src/Position/: Position.cpp  Position.h
src/Quote/: Quote.cpp  Quote.h  QuoteToCSV.cpp  QuoteToCSV.h
src/Trade/: Trade.cpp  Trade.h  TradeToCSV.cpp  TradeToCSV.h
src/TradeApi/: Tradeapi.cpp  Tradeapi.h
